fdo#77969: Return 0 in case of matrix consisting of all empty elements.

Change-Id: I225d50445d7f84a17c0b9492c17247e4c1c9ef44