sc/source/core/tool/scmatrix.cxx
@@ -1235,12 +1235,14 @@ class CalcMaxMinValue : std::unary_function<MatrixImplType::element_block_type, 
 {
     double mfVal;
     bool mbTextAsZero;
+    bool mbHasValue;
 public:
     CalcMaxMinValue( bool bTextAsZero ) :
         mfVal(_Op::init()),
-        mbTextAsZero(bTextAsZero) {}
+        mbTextAsZero(bTextAsZero),
+        mbHasValue(false) {}
 
-    double getValue() const { return mfVal; }
+    double getValue() const { return mbHasValue ? mfVal : 0.0; }
 
     void operator() (const MatrixImplType::element_block_node_type& node)
     {
@@ -1255,6 +1257,8 @@ public:
                 block_type::const_iterator itEnd = block_type::end(*node.data);
                 for (; it != itEnd; ++it)
                     mfVal = _Op::compare(mfVal, *it);
+
+                mbHasValue = true;
             }
             break;
             case mdds::mtm::element_boolean:
@@ -1265,6 +1269,7 @@ public:
                 block_type::const_iterator itEnd = block_type::end(*node.data);
                 double fVal = _Op::boolValue(it, itEnd);
                 mfVal = _Op::compare(mfVal, fVal);
+                mbHasValue = true;
             }
             break;
             case mdds::mtm::element_string:
@@ -1272,7 +1277,10 @@ public:
             {
                 // empty elements are treated as empty strings.
                 if (mbTextAsZero)
+                {
                     mfVal = _Op::compare(mfVal, 0.0);
+                    mbHasValue = true;
+                }
             }
             break;
             default:
